# SkiaGUI

./: CMakeLists.txt  README.md  SkiaGUI.vcxproj  SkiaGUI.vcxproj.filters  todo.txt
src/: Fps.h  pch.h
src/controls/: Button.cpp  Button.h  InfiniteCanvas.cpp  InfiniteCanvas.h
src/controls/texteditor/: Editor.cpp  Editor.h  EditorDoc.cpp  EditorDoc.h  EditorView.cpp  EditorView.h  TextBuffer.cpp  TextBuffer.h  TextSpan.h  UndoRedo.cpp  UndoRedo.h  shape.cpp  shape.h  utf8_helpers.cpp  utf8_helpers.h  word_boundaries.cpp  word_boundaries.h
src/core/: Functions.cpp  Functions.h  LayeredArea.cpp  LayeredArea.h  SDLSkiaApp.cpp  SDLSkiaApp.h  SDLSkiaWindow.cpp  SDLSkiaWindow.h  SplittableArea.cpp  SplittableArea.h  UIArea.cpp  UIArea.h  UIElement.cpp  UIElement.h
src/resources/: Resources.cpp  Resources.h  Zip.cpp  Zip.h
